# comp0124_coursework

./: .gitignore  README.md  pyproject.toml  requirements.txt
comp0124_coursework/: experiment.py  hyperparameter_search.py
comp0124_coursework/agent/: ant.py
comp0124_coursework/model/: base_environment.py
comp0124_coursework/notebooks/: food_consumption_log.csv  scratch.ipynb
