[tool.poetry]
name = "comp0124-coursework"
version = "0.1.0"
description = ""
authors = ["Linus Folkerts <linus.folkerts@li-f.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.9.0.80"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
